    - it is possible to add several ssh keys from commandline in form:
      --ssh-key=[user@][server:][port:]<path to key>
      it can be usefull for TCE or login over broker   
    - improve brocker code
      add support for "usebrockerpass" config variable to use brocker pass for ssh auth on X2Go server 
    - commandline options --broker-user and --broker-noauth

  [ Ricardo Diaz ]
  * New upstream version (3.99.3.0):
    - Add Spanish translation file.

 -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Wed, 05 Sep 2012 11:40:47 +0200

x2goclient (3.99.2.2-0~x2go2) unstable; urgency=low

  * Add Conflicts/Replaces for x2goclient-gtk.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 20 Aug 2012 09:58:47 +0200

x2goclient (3.99.2.2-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.2.2):
    - Drop Encoding key from .desktop file (as it is deprecated
      according to latest FreeDesktop.org specs).
    - Correct spelling for mis-spelled work ,,authentication''.
    - Allow QMAKE_* parameters that are needed for hardening x2goclient
      (see http://wiki.debian.org/Hardening).
    - Provide CPPFLAGS for QMAKE_CFLAGS _and_ QMAKE_CXXFLAGS. Provide them as
      first build parameters.
    - Allow x2goclient to connect to user accounts that have other shells than
      /bin/sh and alike configured as default shell. Also: removal bashisms in
      shell execution commands.
    - X2Go resume session slot: double click on a selected session is supposed
      to resume that session. To make this feature functional for running
      sessions the session has to be suspended first.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.2.2):
    - Fixing X2Go Plugin
    - Cleaning code: double click on running session. Instead of using function
      "sleep" starting resume-session after suspend-session is returned.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 10 Aug 2012 10:08:52 +0200
