@@ -16,6 +16,7 @@
 #include <QBuffer>
 #include <QObject>
 #include <QDateTime>
+#include "sshmasterconnection.h"
 /**
 	@author Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>
 */
@@ -43,14 +44,29 @@ private:
     QString newBrokerPass;
     ConfigFile* config;
     ONMainWindow* mainWindow;
+    QTime requestTime;
+    bool sshBroker;
+    SshMasterConnection* sshConnection;
+private:
     void createIniFile(const QString& content);
     void parseSession(QString sInfo);
-    QTime requestTime;
+    void createSshConnection();
+    bool checkAccess(QString answer);
 
 private slots:
     void slotRequestFinished ( int id, bool error );
     void slotSslErrors ( const QList<QSslError> & errors ) ;
     QString getHexVal ( const QByteArray& ba );
+    void slotSshConnectionError ( QString message, QString lastSessionError );
+    void slotSshServerAuthError ( int error, QString sshMessage, SshMasterConnection* connection );
+    void slotSshServerAuthPassphrase ( SshMasterConnection* connection );
+    void slotSshUserAuthError ( QString error );
+    void slotSshConnectionOk();
+    void slotListSessions ( bool success, QString answer, SshProcess* proc);
+    void slotSelectSession ( bool success, QString answer, SshProcess* proc);
+    void slotPassChanged ( bool success, QString answer, SshProcess* proc);
+    void slotConnectionTest( bool success, QString answer, SshProcess* proc);
+
 public slots:
     void getUserSessions();
 
